fix: add no-scrollbar class in index.css file

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,24 @@
 *{
   font-family: 'cdg', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+@layer utilities {
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      .no-scrollbar::-webkit-scrollbar {
+          display: none;
+      }
+     /* Hide scrollbar for IE, Edge and Firefox */
+      .no-scrollbar {
+          -ms-overflow-style: none;  /* IE and Edge */
+          scrollbar-width: none;  /* Firefox */
+    }
+}
+
+:root {
+    overflow: scroll;
+    scrollbar-width: none;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
